--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,3 +5,25 @@
 .navbar{
 	background-color: transparent;
 }
+
+.header{
+	background-image: url('../img/black.png');
+}
+
+.wrapper > .header{
+	min-height: 380px;
+}
+
+.img-raised{
+	max-width: 160px;
+    margin: -80px auto 0;
+}
+
+.profile{
+	text-align: center;
+}
+
+.description{
+	margin: 30px auto 0;
+    max-width: 600px;
+}
