--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,54 +1,45 @@
-.navigation-small{
-    height:0px;
+.navigation-small {
+    height: 0px;
 }
 
-.navbar{
-	background-color: transparent;
+.navbar {
+	background: transparent;
 }
 
-.header{
-	background-image: url('../img/black.png');
+.header {
+	background-image: url(../img/black.png);
 }
 
-.wrapper > .header{
+.wrapper > .header {
 	min-height: 380px;
 }
 
-.img-raised{
+.img-raised {
 	max-width: 160px;
+
     margin: -80px auto 0;
 }
 
-.profile{
+.profile {
 	text-align: center;
 }
 
-.description{
+.description {
 	margin: 30px auto 0;
+
     max-width: 600px;
 }
 
-.project{
+.project {
 	width: 100%;
+	
     margin-bottom: 30px;
 }
 
-.carousel-control:hover, .carousel-control:focus {
-    outline: 0;
-    color: #fff;
-    text-decoration: none;
-    opacity: .9;
+.img-rounded {
+	padding: 0.5em;
 }
 
-.carousel-control.right {
-    left: auto;
-    right: 0;
- }
-
-.img-rounded{
-	padding:0.5em;
-}
-
-.change-icon-color{
-	color:red;
+.change-icon-color {
+	color: red;
 }
