--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,11 +3,12 @@
 }
 
 .navbar {
-	background: transparent;
+    background-color: rgba(125, 0, 146, 0.5);
 }
 
 .header {
 	background-image: url(../img/black.png);
+	background-attachment: fixed;
 }
 
 .wrapper > .header {
